VO-3128 - Auctions navigation overflow fixes
For ES and FR

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -172,6 +172,21 @@ body.lang_es {
     }
   }
 
+  /* Auction Nav */
+  .app-header.auctions {
+    .nav-bkgd {
+      height: 62px;
+    }
+    .nav-primary li {
+      max-width: 20%;
+      text-align: center;
+
+      &.link_auction_bulkflooring {
+        width: 160px;
+      }
+    }
+  }
+
 
   #ProfileSettingsPage, #AccountManagementPage {
     @media (max-width: 1090px) {
